# edu_blockchain_data

./: README.md  draft.py  draft_cg.py  draft_cg_markets.py  draft_coincodex.py  draft_ref.py  export_markets_cg.py  export_ref_cc.py  pyproject.toml  ref_validation.py
dal/: coincodex.py  coingecko.py
data/markets/cg/: .~lock.markets_cg_20220914.csv#
data/ref/cc/: ref_cc_20220914.csv
data/ref/main/: ref_main.csv  ref_main_10.csv
scripts/: cc_markets_histo.py  cc_ref.py  cg_markets_spot.py  mkt_cap.py
static/tests/mock/: coincodex.html
tests/: test_coincodex.py
tests/utils/: test_datetime.py  test_optim.py
utils/: datetime.py  optim.py
