[tool.poetry]
name = "edu_blockchain_data"
version = "0.1.0"
description = ""
authors = ["Guillaume Garchery <polluxxx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycoingecko = "^3.0.0"
numpy = "^1.23.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
