[tool.poetry]
name = "edu_blockchain_data"
version = "0.1.0"
description = ""
authors = ["Guillaume RedRise <polluxxx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycoingecko = "^3.0.0"
numpy = "^1.23.3"
pandas = "^1.4.4"
requests = "^2.28.1"
bs4 = "^0.0.1"
humanfriendly = "^10.0"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
